# vuln_mcp_server

./: .dockerignore  .gitignore  Dockerfile  README.md  app-config.json  burp-demo.txt  docker-compose.yml  payroll.csv  pyproject.toml  requirements.txt
