[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toxy-vulnerable-mcp-server"
version = "0.1.0"
description = "An intentionally insecure MCP lab for hands-on security practice."
readme = "README.md"

[project.urls]
Homepage = "https://github.com/toxicaj/vuln_mcp_server"
Repository = "https://github.com/toxicaj/vuln_mcp_server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
toxy-vulnerable-mcp = "toxy_vulnerable_mcp.server:main"

[tool.setuptools.packages.find]
include = ["toxy_vulnerable_mcp*"]
